--- a/_layouts/about-me.html
+++ b/_layouts/about-me.html
@@ -274,6 +274,25 @@ h1.card-title {
   object-fit: cover; /* Ensure the image fits without being distorted */
   margin-bottom: 15px; /* Add some spacing between the image and other content */
 }
+.company-logo {
+  max-width: 100%; /* Ensures the logo doesn't exceed its container */
+  height: auto;
+  border-radius: 5px;
+  margin-bottom: 10px;
+}
+
+.experience-title {
+  font-size: 1.2em;
+}
+
+.experience-info {
+  font-size: 1em;
+  color: #888;
+}
+
+.experience-desc {
+  font-size: 0.9em;
+}
 
 
 
@@ -576,7 +595,7 @@ h1.card-title {
       {% endif %} {% endfor %}
     </div>
     {% endif %} {% if site.show_author_work_experiences == true %}
-    <div class="card">
+    <!-- <div class="card">
       <h1 class="card-title">Work Experience</h1>
       <br />
       {% for exp in site.author_work_experiences %} {% if exp.visibility == true
@@ -596,7 +615,31 @@ h1.card-title {
         </div>
       </div>
       {% endif %} {% endfor %}
+    </div> -->
+    <div class="card">
+      <h1 class="card-title">Work Experience</h1>
+      <br />
+      {% for exp in site.author_work_experiences %} 
+      {% if exp.visibility == true %}
+      <div class="row mb-4">
+        <div class="col-12 col-md-2 d-flex justify-content-center">
+          <img
+            src="{{site.url}}{{site.baseurl}}/assets/img/{{ exp.company_logo }}"
+            class="company-logo img-fluid"
+            alt="Company Logo"
+          />
+        </div>
+        <div class="col-12 col-md-10">
+          <h4 class="experience-title">{{ exp.designation }}</h4>
+          <h6 class="experience-info">{{ exp.company_name }}</h6>
+          <p class="experience-desc">{{ exp.description }}</p>
+          <p><a href="{{exp.company_url}}">{{ exp.company_url }}</a></p>
+        </div>
+      </div>
+      {% endif %} 
+      {% endfor %}
     </div>
+    
     {% endif %} {% if site.show_author_education_details == true %}
     <div class="card">
       <h1 class="card-title">Education</h1>
